--- a/estoque_visual.html
+++ b/estoque_visual.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulação de Reposição de Estoque</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estoque_visual.css">
 </head>
 <body>
     
@@ -32,7 +32,7 @@
 
        
 
-    <script src="script.js"></script>
+    <script src="estoque_visual.js"></script>
 
 
 </body>
