--- a/cadastrar_produtos.html
+++ b/cadastrar_produtos.html
@@ -14,7 +14,7 @@
     <header class="navbar">
         <div class="navbar-container">
             <a href="index.html" class="navbar-brand">
-                <img src="caminho/para/o/seu/logo.png" alt="Fluxon Logo" class="navbar-icon-img">
+                <img src="imagens1/Caixa.png" alt="Fluxon Logo" class="navbar-icon-img">
                 Fluxon
             </a>
             <button class="navbar-toggle" id="navbarToggle">
