--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </ul>
             </div>
             <div class="about-image">
-                <img src="imagens1/fluxon_interface_mockup1.png" alt="Interface do Aplicativo Fluxon">
+                <img src="imagens1/Captura de tela 2025-06-09 131811.png" alt="Interface do Aplicativo Fluxon">
             </div>
         </div>
     </section>
