--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </ul>
             </div>
             <div class="about-image">
-                <img src="imagens1/Captura de tela 2025-06-09 131811.png" alt="Interface do Aplicativo Fluxon">
+                <img src="imagens1/Captura de tela 2025-06-17 220134.png" alt="Interface do Aplicativo Fluxon">
             </div>
         </div>
     </section>
@@ -134,7 +134,7 @@
         <div class="cta-content">
             <h2>Pronto para Transformar seu Estoque?</h2>
             <p>Descubra como o Fluxon pode trazer inteligência e clareza para a gestão do seu inventário.</p>
-            <a href="inicio.html" class="btn-primary">Experimente o Fluxon Agora</a>
+            <a href="dashboard.html" class="btn-primary">Experimente o Fluxon Agora</a>
             <a href="#" class="btn-secondary">Agendar uma Demonstração</a>
         </div>
     </section>
@@ -162,9 +162,9 @@
             </div>
             <div class="footer-social">
                 <h3>Siga-nos</h3>
-                <a href="#" aria-label="LinkedIn"><img src="imagens1/icon_linkedin.png" alt="LinkedIn"></a>
-                <a href="#" aria-label="Facebook"><img src="imagens1/icon_facebook.png" alt="Facebook"></a>
-                <a href="#" aria-label="Instagram"><img src="imagens1/icon_instagram.png" alt="Instagram"></a>
+                <a href="#" aria-label="LinkedIn"><img src="imagens1/likendin.png" alt="LinkedIn"></a>
+                <a href="#" aria-label="Facebook"><img src="imagens1/facebook icon.jpg" alt="Facebook"></a>
+                <a href="#" aria-label="Instagram"><img src="imagens1/instaicon.png" alt="Instagram"></a>
             </div>
         </div>
         <div class="footer-bottom">
