--- a/dashboard.html
+++ b/dashboard.html
@@ -47,13 +47,7 @@
                     <p class="card-description">Adicione novos produtos ao seu estoque.</p>
                 </a>
 
-                <a href="erp_produtos.html" class="dashboard-card">
-                    <div class="card-icon">
-                        <i class="fas fa-chart-line"></i> </div>
-                    <h3 class="card-title">ERP de Produtos</h3>
-                    <p class="card-description">Acompanhe detalhes, datas e históricos dos produtos.</p>
-                </a>
-            </div>
+                
         </section>
     </main>
 
@@ -76,11 +70,11 @@
                 <p>Email: contato@fluxon.com</p>
                 <p>Telefone: (XX) XXXX-XXXX</p>
             </div>
-            <div class="footer-social">
-                <h3>Redes Sociais</h3>
-                <a href="#"><img src="caminho/para/o/seu/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="caminho/para/o/seu/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="caminho/para/o/seu/linkedin.png" alt="LinkedIn"></a>
+             <div class="footer-social">
+                <h3>Siga-nos</h3>
+                <a href="#" aria-label="LinkedIn"><img src="imagens1/likendin.png" alt="LinkedIn"></a>
+                <a href="#" aria-label="Facebook"><img src="imagens1/facebook icon.jpg" alt="Facebook"></a>
+                <a href="#" aria-label="Instagram"><img src="imagens1/instaicon.png" alt="Instagram"></a>
             </div>
         </div>
         <div class="footer-bottom">
